--- a/FinSharkApi/FinShark.API/appsettings.json
+++ b/FinSharkApi/FinShark.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=ZPATAKYSURFACE4;Initial Catalog=FinShark;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
